Copying track from private bucket to public bucket with generated ID to serve track
